fixed modal window position on mobile

--- a/app/css/modal.css
+++ b/app/css/modal.css
@@ -29,10 +29,8 @@
 .modal-window {
     position: relative;
     margin: 0 auto;
-    max-width: 870px;
     width: 100%;
-    height: 300px;
-    padding-left: 370px;
+    height: 200px;
     transform: translateY(-450px);
     transition: transform .35s ease-in;
 }
@@ -60,4 +58,10 @@
     left: 50%;
     transform: translateX(-50%);
     top: unset;
+}
+@media (max-width: 765px){
+    .modal-window .form {
+        position: relative;
+        margin: 0;
+    }
 }
